2008-03-02  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: Refactoring code at prepare.
	          If keep clause exists and head tag not found,
	          insert head tag and javascirpt.
	* Fix: Bug for Auto Bind client side data.
	       When input tag has no type attr,
	       then lost value.
	* Fix: bug fix reported by Koguro.
	
2008-03-01  Katsutoshi Itoh <cut-sea@kahua.org>

	* Fix: Some bugs typo and so on.
	       These are all reported by Koguro.
	* Fix: When first access, then x-kahua-client-context can't set #t.
	       So, at the time, javascript couldn't insert head tag.
	       For fix the bug, introduce prepare procedure before interp.
	* Change: keep clause can get #f which mean as no keep/collect.
	* Change: doc/Modules/kahua.elem.ja
	          modify document at keep clause section.
	* Change: keep clause can get symbol or string data.
	          example (keep 'text "textarea" "checkbox" ...)
	          This collect/keep client context selectable by type.
	          The types are text/textarea/password/checkbox/radio/select.
	          Or #t means all types collect/keep.
	
2008-02-29  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: support symbol key for kahua-client-context-ref
	          and kahua-client-context-ref*.
	* Change: doc/Modules/kahua.elem.ja
	          doc/Modules/kahua.server.ja
	          add explainment for keep clause at @@ auxs and
	          kahua-client-context-ref/kahua-client-context-ref*
	* Change: add optgroup handling on javascript.
	* Change: modify client side data binding methodology.
	          new kahua server side binding.
	* Change: str->alist ,which is internal defined function of
	          %client-context-alist perform at just first time
	          aim to performance.
	* Change: optimize javascript a little.
	          remove useless values from query-string.
	
	
2008-02-28  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: add kahua-client-context-ref,kahua-client-context-ref*.